--- a/frontend/core/src/main/webapp/static/app/main/itemEditor.html
+++ b/frontend/core/src/main/webapp/static/app/main/itemEditor.html
@@ -35,7 +35,8 @@
         <div ng-if="itemDescriptionFocused" class="group-symmetrical--right">
           <div class="text-field--label-multi-row">
             <span ng-bind="'de' + (columns === 1 ? '-\n' : '') + 'scription'"
-              class="text-field--label-bold"></span>
+              class="text-field--label-bold">
+            </span>
           </div>
         </div>
 
