Inbox sorting related LESS.

--- a/frontend/core/src/main/webapp/static/app/base/listFooter.html
+++ b/frontend/core/src/main/webapp/static/app/base/listFooter.html
@@ -5,7 +5,7 @@
   </a>
 
   <a href ng-if="isLeftActionActive()" class="group-symmetrical--left" swiper-click="leftAction()">
-    <span ng-bind="leftActionText"></span>
+    <span class="icon-sort"></span>
   </a>
 
   <div class="group-symmetrical--middle">
