--- a/frontend/core/src/main/webapp/static/app/main/editor.html
+++ b/frontend/core/src/main/webapp/static/app/main/editor.html
@@ -37,33 +37,30 @@
       <div ng-include="urlBase + 'app/lists/listEditor.html'" include-replace></div>
     </div>
 
-    <div class="container-editor--inner__after group-symmetrical">
+    <footer class="container-editor--inner__after group-symmetrical">
 
       <a href ng-if="!isIterableItemDirty()" class="group-symmetrical--left" swiper-click="endSorting()">
-        <span style="color: white;">done</span>
+        <span class="icon-sort-stop"></span>
       </a>
-      <a href ng-if="isIterableItemDirty()" class="group-symmetrical--left"
+      <a href ng-if="isIterableItemDirty()" class="group-symmetrical--left link-sort"
         swiper-click="undoSorting(iterableItem)">
-        <span style="color: white;">undo</span>
+        <span class="text-sort emphasis">undo</span>
       </a>
 
-      <div class="group-symmetrical--middle">
-        <a href>
-          <span style="color: white;"
-            ng-bind="getIterableItemIndex(iterableItem) + 1 + '/' + iterableItems.length"></span>
-        </a>
+      <div class="group-symmetrical--middle group-centered">
+        <span class="text-sort" ng-bind="getIterableItemIndex(iterableItem) + 1 + '/' + iterableItems.length"></span>
       </div>
 
       <a href ng-if="!isIterableItemDirty() && getIterableItemIndex(iterableItem) !== iterableItems.length - 1"
-        class="group-symmetrical--right" swiper-click="saveItemAndGotoNextItem(iterableItem)">
-        <span style="color: white;">skip</span>
+        class="group-symmetrical--right link-sort" swiper-click="saveItemAndGotoNextItem(iterableItem)">
+        <span class="text-sort emphasis">skip</span>
       </a>
-      <a href ng-if="isIterableItemDirty()" class="group-symmetrical--right"
+      <a href ng-if="isIterableItemDirty()" class="group-symmetrical--right link-sort"
         swiper-click="saveItemAndGotoNextItem(iterableItem)">
-        <span style="color: white;"
+        <span class="text-sort emphasis"
           ng-bind="getIterableItemIndex(iterableItem) !== iterableItems.length - 1 ? 'next' : 'finish'"></span>
       </a>
-    </div>
+    </footer>
   </div>
 
   <div ng-if="editorVisible" toaster="override"></div>
