--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -52,7 +52,7 @@
   </header>
 
   <div class="swiper-container container-fluid--inner" swiper-container="taskEditor" swiper-type="main"
-    expected-slides="2" swiper-container-toggle-drawer-sliding-events="true"
+    expected-slides="2" swiper-container-toggle-drawer-sliding-events="hasSwipeToClose('task')"
     swiper-container-slide-changed="editorSwiperSlideChanged()">
     <div class="swiper-wrapper">
       <div class="swiper-slide" swiper-slide="taskEditor/basic" slide-index="0" ng-init="basicSlideInfo = {}">
