--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -96,37 +96,47 @@
 
           </div>
 
+          <!-- LIST -->
+          <div ng-if="note.trans.list" ng-hide="isNotePropertyInEdit()" class="group-mixed with-checkbox">
+            <a href class="group-mixed--middle link-search-result" swiper-click="openListPicker()">
+              <span class="text-field--title" ng-bind="note.trans.list.trans.title"></span>
+            </a>
+            <div class="group-mixed--right">
+              <span class="text-field--label">list</span>
+            </div>
+          </div>
+
+          <!-- KEYWORDS -->
+          <div ng-if="note.trans.keywords && note.trans.keywords.length" ng-hide="isNotePropertyInEdit()"
+            class="group-mixed with-checkbox">
+            <a href class="group-mixed--middle link-search-result" swiper-click="openKeywordsPicker()">
+              <span class="text-field--title" ng-bind="getKeywordsListString(note)"></span>
+            </a>
+            <div class="group-mixed--right">
+              <span class="text-field--label">keywords</span>
+            </div>
+          </div>
+
           <!-- COLLAPSIBLE-->
           <div ng-if="collapsibleOpen" ng-hide="isNotePropertyInEdit()">
 
             <!-- LIST -->
-            <div class="group-mixed with-checkbox">
-              <a href class="group-mixed--middle link-search-result" ng-class="!note.trans.list && 'downplayed'"
-                swiper-click="openListPicker()">
-                <span class="text-field--title"
-                  ng-bind="note.trans.list ? note.trans.list.trans.title : 'select list\u2026'">
-                </span>
+            <div ng-if="!note.trans.list" class="group-mixed with-checkbox">
+              <a href class="group-mixed--middle link-search-result downplayed" swiper-click="openListPicker()">
+                <span class="text-field--title">select list&#8230;</span>
               </a>
-              <div ng-if="note.trans.list" class="group-mixed--right">
-                <span class="text-field--label">list</span>
-              </div>
             </div>
 
             <!-- KEYWORDS -->
-            <div class="group-mixed with-checkbox">
-              <a href class="group-mixed--middle link-search-result"
-                ng-class="(!note.trans.keywords || !note.trans.keywords.length) && 'downplayed'"
+            <div ng-if="!note.trans.keywords || !note.trans.keywords.length" class="group-mixed with-checkbox">
+              <a href class="group-mixed--middle link-search-result downplayed"
                 swiper-click="openKeywordsPicker()">
-                <span class="text-field--title"
-                  ng-bind="(note.trans.keywords && note.trans.keywords.length) ? getKeywordsListString(note) : 'add keywords\u2026'">
-                </span>
+                <span class="text-field--title">add keywords&#8230;</span>
               </a>
-              <div ng-if="note.trans.keywords && note.trans.keywords.length" class="group-mixed--right">
-                <span class="text-field--label">keywords</span>
-              </div>
             </div>
           </div>
-          <div ng-if="!onboardingInProgress" ng-hide="isNotePropertyInEdit()" class="row collapsible">
+          <div ng-if="!onboardingInProgress && hasUnsetCollapsableProperty()" ng-hide="isNotePropertyInEdit()"
+            class="row collapsible">
             <a href class="downplayed" swiper-click="toggleCollapsible()">
               <span ng-class="collapsibleOpen ? 'text-expand-up' : 'text-expand-down'"
                 ng-bind="collapsibleOpen ? 'less' : 'more'"></span>
