Renamed 'enter' to return in keywords picker help text.

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -186,7 +186,7 @@
                   maxlength="128">
               </form>
               <span class="text-details row" ng-if="newKeyword.trans.title"
-                ng-bind="'hit enter to create #' + newKeyword.trans.title" clamp=2>
+                ng-bind="'hit return to create #' + newKeyword.trans.title" clamp=2>
               </span>
 
               <div ng-if="noteHasKeywords(note)" class="keywords-container row">
