--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -14,7 +14,7 @@
 
         <a href ng-if="isPickerOpen()" ng-click="propertyEditDone()" class="group-symmetrical--left highlighted"
           editable-field-container="auto">
-          <span class="text-edit">done</span>
+          <span class="text-edit" ng-bind="isPropertyEdited() ? 'save' : 'done'"></span>
         </a>
 
         <div ng-show="isTaskPropertyInEdit() || !isFirstSlide('taskEditor')"
@@ -139,7 +139,10 @@
               list-picker-clear="closeListPickerAndClearListFromItem(task, list)"
               list-picker-get-selected="task.trans.list"
               list-picker-register-save-new-list-callback="registerPropertyEditDoneCallback(saveNewList)"
-              list-picker-unregister-save-new-list-callback="unregisterPropertyEditDoneCallback()"></div>
+              list-picker-unregister-save-new-list-callback="unregisterPropertyEditDoneCallback()"
+              list-picker-register-is-edited-callback="registerIsPropertyEdited(isEdited)"
+              list-picker-unregister-is-edited-callback="unregisterIsPropertyEdited()">
+            </div>
           </div>
 
           <!-- DESCRIPTION -->
@@ -196,7 +199,10 @@
               list-picker-get-selected="task.trans.context" list-picker-type="context"
               list-picker-prefix="@"
               list-picker-register-save-new-list-callback="registerPropertyEditDoneCallback(saveNewList)"
-              list-picker-unregister-save-new-list-callback="unregisterPropertyEditDoneCallback()"></div>
+              list-picker-unregister-save-new-list-callback="unregisterPropertyEditDoneCallback()"
+              list-picker-register-is-edited-callback="registerIsPropertyEdited(isEdited)"
+              list-picker-unregister-is-edited-callback="unregisterIsPropertyEdited()">
+            </div>
           </div>
 
           <!-- REPEATING -->
