--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -324,23 +324,21 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/rightDuplicate" slide-index="0" swiper-slide-duplicate="true">
           <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
-            list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate" list-hide-item-default>
+            list="getTasksArray('date', {date: daySlides[2].info, pastDate: daySlides[2].pastDate})"
+            list-hide-item-default>
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
                 <div class="group-mixed--middle" swiper-click="openDatepicker(daySlides[2].info)">
                   <h2 class="group-heading justified" ng-bind="daySlides[2].heading"></h2>
                 </div>
-                <div class="group-mixed--right" task-list-completed="rightDuplicateTasksDate"></div>
+                <div class="group-mixed--right" task-list-completed="{{daySlides[2].pastDate}}"></div>
               </div>
 
               <div list-item-add="getNewDayTask(2)" list-item-add-save="saveTask(newItem)"
                 ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
               <div class="animate-list-item-leave"
-                ng-repeat="task in listInfos.array = (getFullArray()
-                | paramFilter:isListItemVisible:daySlides[2].pastDate)
-                | orderBy:'trans.created':true
-                | limitTo: currentListLimitTo track by task.trans.uuid"
+                ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo)"
                 list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
               <div list-prompt="tasks" list-prompt-infos="listInfos"
                 list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
@@ -350,23 +348,22 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="1" swiper-slide-loop-start="true">
           <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
-            list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate" list-hide-item-default>
+            list="getTasksArray('date', {date: daySlides[0].info, pastDate: daySlides[0].pastDate})"
+            list-hide-item-default>
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
                 <div class="group-mixed--middle" swiper-click="openDatepicker(daySlides[0].info)">
                   <h2 class="group-heading justified" ng-bind="daySlides[0].heading"></h2>
                 </div>
-                <div class="group-mixed--right" task-list-completed></div>
+                <div class="group-mixed--right" task-list-completed="{{daySlides[0].pastDate}}"></div>
               </div>
 
               <div list-item-add="getNewDayTask(0)" list-item-add-save="saveTask(newItem)"
                 ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
               <div class="animate-list-item-leave"
-                ng-repeat="task in listInfos.array = (getFullArray()
-                | paramFilter:isListItemVisible:daySlides[0].pastDate)
-                | orderBy:'trans.created':true
-                | limitTo: currentListLimitTo track by task.trans.uuid"
+                ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo)
+                track by task.trans.uuid"
                 list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
               <div list-prompt="tasks" list-prompt-infos="listInfos"
                 list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
@@ -376,23 +373,22 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/middle" slide-index="2">
           <div class="container-content" ng-class="daySlides[1].pastDate && 'past-date'"
-            list="tasks | tasksByDate:daySlides[1].info:daySlides[1].pastDate" list-hide-item-default>
+            list="getTasksArray('date', {date: daySlides[1].info, pastDate: daySlides[1].pastDate}, daySlides[1].info)"
+            list-hide-item-default>
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
                 <div class="group-mixed--middle" swiper-click="openDatepicker(daySlides[1].info)">
                   <h2 class="group-heading justified" ng-bind="daySlides[1].heading"></h2>
                 </div>
-                <div class="group-mixed--right" task-list-completed></div>
+                <div class="group-mixed--right" task-list-completed="{{daySlides[1].pastDate}}"></div>
               </div>
 
               <div list-item-add="getNewDayTask(1)" list-item-add-save="saveTask(newItem)"
                 ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
               <div class="animate-list-item-leave"
-                ng-repeat="task in listInfos.array = (getFullArray()
-                | paramFilter:isListItemVisible:daySlides[1].pastDate)
-                | orderBy:'trans.created':true
-                | limitTo: currentListLimitTo track by task.trans.uuid"
+                ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo)
+                track by task.trans.uuid"
                 list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
               <div list-prompt="tasks" list-prompt-infos="listInfos"
                 list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
@@ -402,23 +398,22 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="3">
           <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
-            list="tasks | tasksByDate:daySlides[2].info:daySlides[2].pastDate" list-hide-item-default>
+            list="getTasksArray('date', {date: daySlides[2].info, pastDate: daySlides[2].pastDate})"
+            list-hide-item-default>
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
                 <div class="group-mixed--middle" swiper-click="openDatepicker(daySlides[2].info)">
                   <h2 class="group-heading justified" ng-bind="daySlides[2].heading"></h2>
                 </div>
-                <div class="group-mixed--right" task-list-completed></div>
+                <div class="group-mixed--right" task-list-completed="{{daySlides[2].pastDate}}"></div>
               </div>
 
               <div list-item-add="getNewDayTask(2)" list-item-add-save="saveTask(newItem)"
                 ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
               <div class="animate-list-item-leave"
-                ng-repeat="task in listInfos.array = (getFullArray()
-                | paramFilter:isListItemVisible:daySlides[2].pastDate)
-                | orderBy:'trans.created':true
-                | limitTo: currentListLimitTo track by task.trans.uuid"
+                ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo)
+                track by task.trans.uuid"
                 list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
               <div list-prompt="tasks" list-prompt-infos="listInfos"
                 list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
@@ -428,23 +423,22 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/leftDuplicate" slide-index="4" swiper-slide-duplicate="true">
           <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
-            list="tasks | tasksByDate:daySlides[0].info:daySlides[0].pastDate" list-hide-item-default>
+            list="getTasksArray('date', {date: daySlides[0].info, pastDate: daySlides[0].pastDate})"
+            list-hide-item-default>
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
                 <div class="group-mixed--middle" swiper-click="openDatepicker(daySlides[0].info)">
                   <h2 class="group-heading justified" ng-bind="daySlides[0].heading"></h2>
                 </div>
-                <div class="group-mixed--right" task-list-completed></div>
+                <div class="group-mixed--right" task-list-completed="{{daySlides[0].pastDate}}"></div>
               </div>
 
               <div list-item-add="getNewDayTask(0)" list-item-add-save="saveTask(newItem)"
                 ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
               <div class="animate-list-item-leave"
-                ng-repeat="task in listInfos.array = (getFullArray()
-                | paramFilter:isListItemVisible:daySlides[0].pastDate)
-                | orderBy:'trans.created':true
-                | limitTo: currentListLimitTo track by task.trans.uuid"
+                ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo)
+                track by task.trans.uuid"
                 list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
               <div list-prompt="tasks" list-prompt-infos="listInfos"
                 list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
