--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -324,8 +324,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/rightDuplicate" slide-index="0" swiper-slide-duplicate="true">
           <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
-            list="getTasksArray('date', {date: daySlides[2].info, pastDate: daySlides[2].pastDate})"
-            list-hide-item-default>
+            list="getTasksArray('date', {date: daySlides[2].info, pastDate: daySlides[2].pastDate})">
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -348,8 +347,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/left" slide-index="1" swiper-slide-loop-start="true">
           <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
-            list="getTasksArray('date', {date: daySlides[0].info, pastDate: daySlides[0].pastDate})"
-            list-hide-item-default>
+            list="getTasksArray('date', {date: daySlides[0].info, pastDate: daySlides[0].pastDate})">
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -373,8 +371,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/middle" slide-index="2">
           <div class="container-content" ng-class="daySlides[1].pastDate && 'past-date'"
-            list="getTasksArray('date', {date: daySlides[1].info, pastDate: daySlides[1].pastDate}, daySlides[1].info)"
-            list-hide-item-default>
+            list="getTasksArray('date', {date: daySlides[1].info, pastDate: daySlides[1].pastDate}, daySlides[1].info)">
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -398,8 +395,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/right" slide-index="3">
           <div class="container-content" ng-class="daySlides[2].pastDate && 'past-date'"
-            list="getTasksArray('date', {date: daySlides[2].info, pastDate: daySlides[2].pastDate})"
-            list-hide-item-default>
+            list="getTasksArray('date', {date: daySlides[2].info, pastDate: daySlides[2].pastDate})">
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
@@ -423,8 +419,7 @@
 
         <div class="swiper-slide" swiper-slide="focus/tasks/leftDuplicate" slide-index="4" swiper-slide-duplicate="true">
           <div class="container-content" ng-class="daySlides[0].pastDate && 'past-date'"
-            list="getTasksArray('date', {date: daySlides[0].info, pastDate: daySlides[0].pastDate})"
-            list-hide-item-default>
+            list="getTasksArray('date', {date: daySlides[0].info, pastDate: daySlides[0].pastDate})">
             <div ng-if="isFeatureActive('focus')">
 
               <div ng-hide="datepickerVisible" class="group-mixed heading">
