Added missing track by to ng-repeat in focus tasks.

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -337,7 +337,8 @@
               <div list-item-add="getNewDayTask(2)" list-item-add-save="saveTask(newItem)"
                 ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
               <div class="animate-list-item-leave"
-                ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo)"
+                ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo)
+                track by task.trans.uuid"
                 list-item ng-include="urlBase + 'app/tasks/taskListItem.html'"></div>
               <div list-prompt="tasks" list-prompt-infos="listInfos"
                 list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
