--- a/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksAll.html
@@ -11,8 +11,7 @@
       <div list-item-add="getNewTask()"
         list-item-add-save="saveTask(newItem)" ng-include="urlBase + 'app/tasks/taskListItemAdd.html'"></div>
       <div class="animate-list-item-leave"
-        ng-repeat="task in listInfos.array = (getFullArray() | paramFilter:isListItemVisible)
-        | limitTo: currentListLimitTo track by task.trans.uuid"
+        ng-repeat="task in getVisibleArray(getFullArray, currentListLimitTo) track by task.trans.uuid"
         list-item ng-include="urlBase + 'app/tasks/taskListItem.html'">
       </div>
       <div list-prompt="tasks" list-prompt-infos="listInfos"
